Bug 1609849 - fix crash @ nsDelAttachListener::StartProcessing . r=benc